modules/uri-template/peg/uri-template.peg
/*
 * Copyright 2011 eBay Software Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

start = URITemplate

URITemplate  = c:( literal / expression )* {
    var o = [], i, current = 0;
    o.push(c[0]);
    for(i = 1; i < c.length; i++) {
        if(c[i].constructor === String && o[current].constructor === String) {
            o[current] = o[current] + c[i];
        }
        else {
            o.push(c[i]);
            current++;
        }
    }
    function select(path, obj) {
        var splits = !path ? [] : path.split('.');
        var curr = obj;
        for(var i = 0; i < splits.length; i++) {
            if(curr[splits[i]]) {
                curr = curr[splits[i]];
                if(i < splits.length - 1 && curr.constructor === Array && curr.length > 0) {
                    curr = curr[0];
                }
            }
            else {
                return null;
            }
        }
        return curr;
    }
    function _append(str, val, encode) {
        var j;
        if(str.constructor === Array) {
            for(j = 0; j < str.length; j++) {
                str[j] = str[j] + (encode ? encodeURIComponent(val) : val);
            }
        }
        else {
            str = str + (encode ? encodeURIComponent(val) : val);
        }
        return str;
    }
    function _format(str, values, defaults, stream) {
        values = values || {};
        defaults = defaults || {};
        var i, j, val, split = false, arr, subset, key;
        stream = stream || o;
        var ele;
        for(i = 0; i < stream.length; i++) {
            ele = stream[i];
            if(ele.constructor === String) {
                str = _append(str, ele, false);
            }
            else {
                if(ele.variable.constructor == Array) {
                    // Case of nested token - only single valued for now
                    key = _format('', values, defaults, ele.variable);
                    val = select(key, values) || select(key, defaults);
                    str = str + val;
                }
                else {
                    val = select(ele.variable, values) || select(ele.variable, defaults);
                    if(val) {
                        if(val.constructor == Array) {
                            // But is the token multivalued?
                            if(val.length === 1) {
                                str = _append(str, val, true);
                            }
                            else if(ele.multivalued) {
                                if(ele.max) {
                                    if(val.length <= ele.max) {
                                        // Append as usual
                                        str = _append(str, val, true);
                                    }
                                    else {
                                        // Split the values into multiple and append each
                                        if(split) {
                                            throw {
                                                error: 'Template can not have multiple single-valued params with multiple values'
                                            }
                                        }
                                        else {
                                            split = true;
                                            // Split and continue.
                                            arr = [];
                                            subset = [];
                                            var start = 0, end = ele.max;
                                            for(j = 0; j < val.length/ele.max; j++) {
                                                subset = val.slice(start, end);
                                                arr.push(_append(str, subset, true));
                                                start += ele.max;
                                                end += ele.max;
                                            }
                                            str = arr;
                                        }
                                    }
                                }
                                else {
                                    str = _append(str, val, true);
                                }
                            }
                            else {
                                // Split if not already split. If already split, error
                                if(split) {
                                    throw {
                                        error: 'Template can not have multiple single-valued params with multiple values'
                                    }
                                }
                                else {
                                    split = true;
                                    // Split and continue.
                                    arr = [];
                                    for(j = 0; j < val.length; j++) {
                                        arr.push(_append(str, val[j], true));
                                    }
                                    str = arr;
                                }
                            }
                        }
                        else {
                            str = _append(str, val, true);
                        }
                    }
                    else if(ele.required) {
                        throw {
                            error: 'Token ' + ele.variable + ' not specified. Processed ' + str
                        }
                    }
                }
            }
        }
        return str;
    }
    return {
        format: function(values, defaults) {
            var str = '', i, j, val, split = false, arr;
            return _format('', values, defaults);
        },
        merge: function() {
            for(i = 0; i < o.length; i++) {
                if(o[i].merge) {
                    return o[i].merge;
                }
            }
            return 'field';
        },
        stream: o
    }
}

// any Unicode character except: CTL, SP,
// DQUOTE, "'", // "<", ">", "\", "`", "{", "|", "}"

literal = [^^ "'<>\`{|}] / expression

expression =  "{" op:operator* v:variable "}" {
    var token = {
        variable: v
    };
    for(var i = 0; i < op.length; i++) {
        for(p in op[i]) {
            if(op[i].hasOwnProperty(p)) {
                token[p] = op[i][p];
            }
        }
    }
    return token;
}

operator = required / blockMerge / multivalued

required = '^' {
    return {
        required: true
    }
}

blockMerge = '#' {
    return {
        merge: 'block'
    }
}

multivalued = d:digits? '|' {
    var ret = {
        multivalued: true
    }
    d = parseInt(d);
    if(d > 0) {
        ret.max = d;
    }
    return ret;
}

variable = l:literal* {
    var o = [];
    o.push(l[0]);
    var current = 0;
    for(var i = 1; i < l.length; i++) {
        if(typeof l[i] === 'string' && typeof o[current] === 'string') {
            o[current] = o[current] + l[i];
        }
        else {
            o.push(l[i]);
            current++;
        }
    }
    return (o.length === 1) ? o[0] : o;
}

digits = d:[0-9]* {
    var str = '';
    for(var i = 0; i < d.length; i++) {
        str += d[i];
    }
    return str;
}
